--- a/src/plugin/CMakeLists.txt
+++ b/src/plugin/CMakeLists.txt
@@ -4,9 +4,10 @@ set(plasmoidplugin_SRCS
     )
 
 add_library(plasmoidplugin SHARED ${plasmoidplugin_SRCS})
+#TODO: Clean up
+#target_link_libraries(plasmoidplugin Qt5::Quick KF5::Plasma)
+target_link_libraries(plasmoidplugin Qt6::Quick)
 
-target_link_libraries(plasmoidplugin Qt5::Quick KF5::Plasma)
+install(TARGETS plasmoidplugin DESTINATION ${KDE_INSTALL_QMLDIR}/org/kde/private/systempanel)
 
-install(TARGETS plasmoidplugin DESTINATION ${QML_INSTALL_DIR}/org/kde/private/systempanel)
-
-install(FILES qmldir DESTINATION ${QML_INSTALL_DIR}/org/kde/private/systempanel)
+install(FILES qmldir DESTINATION ${KDE_INSTALL_QMLDIR}/org/kde/private/systempanel)
